--- a/src/global-style.css
+++ b/src/global-style.css
@@ -1,5 +1,5 @@
 html {
     background-color: #F9D549;
-    font-family: "DM Sans";
-    color: "#215CB5 ";
+    font-family: "DM Sans", sans-serif;
+    color: #215CB5;
 }
